SE-54: Add ingress for Kibana

--- a/elk-stack/kibana/kibana.yaml
+++ b/elk-stack/kibana/kibana.yaml
@@ -12,3 +12,7 @@ spec:
   #   tls:
   #     selfSignedCertificate:
   #       disabled: true
+  http:
+    service:
+      spec:
+        type: LoadBalancer
